# Tool-Agent-Shift-Benchmark

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SPEC.md  README.md  SECURITY.md  pyproject.toml  release-notes-v0.1.0.md
.github/workflows/: ci.yml
configs/: ablations.yaml  default.yaml  full.yaml  seeds.yaml  small.yaml
docs/: agent_monitor_boundaries.md  artifact_manifest.md  eval_card.md  experimental_report.md  failure_taxonomy.md  future_work.md  index.md  limitations.md  methodology.md  paper.md  reproducibility.md  safety_case.md  threat_model.md
fixtures/offline_llm_policy/: policy_cases.json
results/: confidence_intervals.csv  config.json  episode_log.csv  failure_cases.csv  monitor_events.csv  multistep_traces.jsonl  seed_summary.csv  static_vs_dynamic.csv  summary.csv
scripts/: clean_outputs.sh  run_repro.sh
src/: generate_report.py  plot_results.py  run_eval.py  run_seeds.py  run_sweep.py
src/agents/: __init__.py  base.py  conservative.py  monitor_gated.py  naive.py  offline_llm_fixture.py  retry.py  validate_then_act.py
src/core/: config.py  context.py  episode.py  registry.py  serialization.py  types.py
src/environments/: base.py  calendar_ops.py  file_ops.py  risk_ops.py
src/faults/: __init__.py  base.py  compound.py  conflicting_output.py  constraint_shift.py  corrupted_memory.py  (+4 more)
tests/: test_agents.py  test_context.py  test_core_types.py  test_environments.py  test_faults.py  test_metrics.py  test_monitors.py  test_multistep_severity_confidence.py  test_reporting.py  test_reproducibility.py
(+20 files in other folders)
